architecture/mongo_sfs.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb-deployment
  labels:
    app: mongodb
spec:
  serviceName: mongodb-service
  replicas: 3
  selector:
    matchLabels:
      app: mongodb
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      partition: 0
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo
          ports:
            - containerPort: 27017
      volumes:
        - name: mongodb-persistent-storage-claim
          persistentVolumeClaim:
            claimName: mongodb-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
spec:
  selector:
    app: mongodb
  clusterIP: None
  ports:
    - protocol: TCP
      name: mongo
      port: 27017
      targetPort: 27017
