architecture/restaurant.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restaurant-deployment
  labels:
    app: restaurant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: restaurant
  template:
    metadata:
      labels:
        app: restaurant
    spec:
      containers:
        - name: restaurant-container
          image: registry.gitlab.com/zoleebossthebosspericulos/kubernetes/restaurant:latest
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: restaurant-service
spec:
  selector:
    app: restaurant
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
