architecture/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/price-calculator"
            backend:
              service:
                name: api-gateway-service
                port:
                  number: 3000
